tests/expectations/compiler/structs/inline_fail.out
Error [ETYC0372013]: Composite initialization expression for `Foo` is missing member `x`.
    --> compiler-test:9:22
     |
   9 |         let a: Foo = Foo { y: 0u32 };
     |                      ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:6:9
     |
   6 | program test.aleo {
     |         ^^^^^^^^^
